<resources>
    <string name="app_name">DoubtOverflow</string>
    <string name="question">What is the difference between \'git pull' and 'git fetch'?</string>
    <string name="name">Akshay Khare</string>
    <string name="no_of_followers">101k</string>
    <string name="no_of_answers">354k</string>
    <string name="search">Search</string>
    <string name="profile_pic">profile_pic</string>
    <string name="answer_icon">answer icon</string>
    <string name="add_filters">Add filters</string>
    <string name="popular_tags">Popular Tags</string>
    <string name="filter">Filter</string>
    <string name="questions">Questions</string>
    <string name="question_description">What are the differences between \'git pull' and 'git fetch'</string>
    <string name="location">Delhi, India</string>
    <string name="location_icon">location icon</string>
    <string name="answers">36 Answers</string>
    <string name="bookmarks">Bookmarks</string>
</resources>