<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#25252b">

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="#f5f5f5"
        android:text="@string/name"
        android:layout_marginTop="5dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/item_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_name"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="60dp">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_pic"
            android:contentDescription="@string/profile_pic" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/item_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_image"
        android:textSize="25sp"
        android:text="@string/location"
        android:textColor="#f5f5f5"
        android:layout_marginStart="15dp"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/item_image"
        app:layout_constraintRight_toLeftOf="@id/item_location"
        app:layout_constraintBottom_toBottomOf="@id/item_location"
        android:src="@drawable/location_icon"
        android:contentDescription="@string/location_icon"/>


    <TextView
        android:id="@+id/item_votes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_location"
        android:textSize="20sp"
        android:textColor="#f5f5f5"
        android:text="@string/no_of_followers"
        android:layout_marginTop="5dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_votes"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>