<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#28282B">

    <TextView
        android:id="@+id/item_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="30sp"
        android:textColor="#f5f5f5"
        android:text="@string/question"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/item_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_question"
        android:layout_marginStart="5dp"
        app:cardCornerRadius="60dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerCrop"/>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/item_image"
        app:layout_constraintTop_toBottomOf="@id/item_question"
        android:textSize="20sp"
        android:textColor="#f5f5f5"
        android:text="@string/name"
        android:layout_marginStart="5dp"/>


    <TextView
        android:id="@+id/item_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/item_image"
        app:layout_constraintTop_toBottomOf="@id/item_name"
        android:textSize="18sp"
        android:textColor="#f5f5f5"
        android:text="@string/no_of_followers"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/item_answer_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="#28282B"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_name"
        android:layout_marginEnd="70dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/item_answer_image"
            android:backgroundTint="@color/Black"/>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/item_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/item_answer_icon"
        app:layout_constraintTop_toBottomOf="@id/item_name"
        android:textSize="20sp"
        android:textColor="#f5f5f5"
        android:text="@string/no_of_answers"
        android:layout_marginStart="5dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>